# arceos

./: .gitignore  .gitmodules  Cargo.toml  How-to-boot-VM.md  Makefile  justfile  log  log.txt
apps/helloworld/: Cargo.toml  asm  guest_asm
apps/hv/: Cargo.toml
apps/hv/guest/: .gitignore
apps/hv/guest/nimbos/bios/: boot16.S
apps/hv/guest/vlbl/: Makefile  defs.h  entry.S  loader.c  virt_int.S  virt_int.c  vlbl.lds
apps/hv/src/: aarch64_config.rs  dtb_aarch64.rs  gdbserver.rs  linux.rs  main.rs  pcpu.rs  process.rs  smp.rs  utils.rs  vcpu.rs  vm.rs  x64.rs
apps/hv/src/device/x86_64/: mod.rs
apps/hv/src/device/x86_64/device_emu/: apic_timer.rs  bundle.rs  debug_port.rs  dummy.rs  i8259_pic.rs  mod.rs  pci.rs  pcip.rs  pit.rs  port_passthrough.rs  uart16550.rs
apps/hv/src/vm/: config.rs
apps/task/parallel/: asm
apps/task/parallel/src/: main.rs
crates/kernel_guard/src/: lib.rs
crates/page_table/src/: bits64.rs
crates/page_table_entry/: Cargo.toml
crates/page_table_entry/src/arch/x86_64/: epte.rs  mod.rs
crates/pci/: Cargo.toml
crates/pci/src/: bus.rs  config.rs  dummy_host.rs  errors.rs  host.rs  lib.rs  msix.rs  root_port.rs
crates/pci/src/util/: byte_code.rs  errors.rs  mod.rs  num_ops.rs
crates/percpu_macros/src/: lib.rs
crates/scheduler/src/: round_robin.rs
crates/timer_list/src/: lib.rs
modules/axalloc/src/: lib.rs
modules/axconfig/: Cargo.toml  _build.rs  log.txt
modules/axconfig/src/: lib.rs
modules/axconfig/src/platform/: pc-x86-hv-guest.toml  pc-x86-hv-type15.toml  pc-x86-hv.toml  pc-x86.toml
modules/axfs/: Cargo.toml
modules/axhal/: Cargo.toml  build.rs  linker.lds.S
modules/axhal/src/: cpu.rs  hv.rs  irq.rs  lib.rs  mem.rs  paging.rs  trap.rs
modules/axhal/src/arch/riscv/: trap.rs
modules/axhal/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  mod.rs  syscall.S  syscall.rs  trap.rs
modules/axhal/src/platform/: mod.rs
modules/axhal/src/platform/aarch64_common/: boot.rs  gic.rs
modules/axhal/src/platform/pc_x86/: apic.rs  boot_type15.rs  config.rs  consts.rs  context.rs  dtables.rs  header.rs  mem.rs  mod.rs  mp.rs  uart16550.rs
modules/axlog/: Cargo.toml
modules/axlog/src/: lib.rs
modules/axmem/: Cargo.toml
modules/axmem/src/: lib.rs  uaccess.rs
modules/axprocess/: Cargo.toml
modules/axprocess/src/: api.rs  fd_manager.rs  hello  lib.rs  link.rs  process.rs  signal.rs  stdio.rs  syscall.rs
modules/axprocess/src/loader/: mod.rs
modules/axprocess/src/scf/: allocator.rs  mod.rs  queue.rs  spin.rs  syscall_forward.rs  syscall_proxy.rs
modules/axprocess/src/syscall/: fs.rs  mod.rs  syscall.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: gpm.rs  lang_items.rs  lib.rs  mp.rs  trap.rs
modules/axruntime/src/hv/: mm.rs  mod.rs  pcpu.rs  utils.rs  vcpu.rs
modules/axruntime/src/hv/vm/: config.rs  mod.rs
modules/axruntime/src/hv/vmx/: mod.rs  smp.rs
modules/axruntime/src/hv/vmx/device_emu/: bundle.rs  debug_port.rs  dummy.rs  i8259_pic.rs  lapic.rs  mod.rs  pci.rs  pcip.rs  pit.rs  uart16550.rs
modules/axruntime/src/type1_5/: config.rs  memory.rs  mod.rs
modules/axsyscall/: Cargo.toml
modules/axsyscall/src/: lib.rs
modules/axtask/: Cargo.toml
modules/axtask/src/: api.rs  lib.rs  run_queue.rs  task.rs  timers.rs  utils.rs
modules/axtask/src/hv/: gpm.rs  mm.rs  mod.rs  notify.rs  pcpu.rs  prelude.rs  scheduler.rs  vcpu.rs
modules/axtask/src/hv/vm/: config.rs  mod.rs
modules/axtask/src/hv/vmx/: mod.rs  smp.rs
modules/axtask/src/hv/vmx/device_emu/: i8259_pic.rs  lapic.rs  mod.rs  shutdown.rs  uart16550.rs
modules/axvm/: Cargo.toml
modules/axvm/src/: hal.rs  hvc.rs  irq.rs  lib.rs  linux.rs  nmi.rs  page_table.rs  vm.rs
modules/axvm/src/arch/x86_64/: mod.rs  pcpu.rs  vcpu.rs
modules/axvm/src/config/: entry.rs  gpm_def.rs  gpm_def_type15.rs  linux_cfg_def.rs  mod.rs  nimbos_cfg_def.rs
modules/axvm/src/device/: dummy_pci.rs  mod.rs
modules/axvm/src/device/virtio/: error.rs  mod.rs
modules/axvm/src/device/virtio/device/: block.rs  dummy.rs  mod.rs  net.rs  serial.rs
modules/axvm/src/device/virtio/queue/: mod.rs  split.rs
modules/axvm/src/device/virtio/transport/: mod.rs  virtio_mmio.rs  virtio_pci.rs
modules/axvm/src/device/x86_64/: mod.rs
modules/axvm/src/device/x86_64/device_emu/: apic_timer.rs  bundle.rs  debug_port.rs  dummy.rs  i8259_pic.rs  mod.rs  pci.rs  pci.rs.bak  pci_dummy.rs  pcip.rs  pit.rs  port_passthrough.rs  uart16550.rs
modules/axvm/src/mm/: guest_memory.rs  mapper.rs  memory_set.rs  mod.rs
scripts/guest/: boot_linux.sh  boot_nimbos.sh  boot_vm.sh  debug.sh  disable-rvm.sh  enable-arceos-hv.sh  enable-rvm.sh  process_up.sh  setup.sh  test_hypercall.c
scripts/host/: Makefile  reboot.sh  reboot_jailhouse.sh  scp.sh
scripts/make/: build.mk  cargo.mk  qemu.mk
scripts/vmm/: scp.mk
testcases/libc-static/: hello  hello.c
ulib/axsyscalls/: Cargo.toml
ulib/axsyscalls/src/: lib.rs  syscall.rs  trap.rs
ulib/axsyscalls/src/utils/: mod.rs
ulib/axsyscalls/syscall_entry/: Cargo.toml
ulib/axsyscalls/syscall_entry/src/: syscall.rs
ulib/libax/: Cargo.toml
ulib/libax/src/: env.rs  hv.rs  lib.rs  prelude.rs  time.rs
ulib/libax/src/io/: mod.rs
