[package]
name = "arceos-hv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
guest_nimbos = []
guest_linux = []

[dependencies]
libax = { path = "../../ulib/libax", features = ["alloc", "hv"] }
page_table_entry = { path = "../../crates/page_table_entry" }
fdt = {version = "0.1.5"}
arrayvec = { version = "0.7.2", default-features = false }
bit_field = "0.10"
bitflags = "2.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9"
axprocess = { path = "../../modules/axprocess"}
axvm = { path = "../../modules/axvm"}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"
