[package]
name = "pci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { version = "0.9", features = ["once", "rwlock", "spin_mutex"] }
log = { version = "0.4" }
byteorder = { version = "1.4.3", default-features = false }
hypercraft = { path = "../hypercraft" }
hashbrown = "0.14"
bit_field = "0.10"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
