[package]
name = "axtask"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS task management module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axtask"
documentation = "https://rcore-os.github.io/arceos/axtask/index.html"

[features]
test = ["percpu?/sp-naive"]
multitask = [
    "dep:axconfig", "dep:percpu", "dep:spinlock", "dep:lazy_init",
    "dep:memory_addr", "dep:scheduler", "dep:timer_list"
]
irq = []
preempt = ["irq", "percpu?/preempt", "kernel_guard/preempt"]

sched_fifo = ["multitask"]
sched_rr = ["multitask", "preempt"]
sched_cfs = ["multitask", "preempt"]
default = ["sched_rr"]
hv = ["dep:axalloc", "dep:hypercraft", "axhal/hv", "dep:page_table", "dep:page_table_entry", "dep:hashbrown"]

[dependencies]
cfg-if = "1.0"
log = "0.4"
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig", optional = true }
percpu = { path = "../../crates/percpu", optional = true }
spinlock = { path = "../../crates/spinlock", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
memory_addr = { path = "../../crates/memory_addr", optional = true }
scheduler = { path = "../../crates/scheduler", optional = true }
timer_list = { path = "../../crates/timer_list", optional = true }
kernel_guard = { path = "../../crates/kernel_guard" }
crate_interface = { path = "../../crates/crate_interface" }
hypercraft = { path = "../../crates/hypercraft", optional = true }
page_table = { path = "../../crates/page_table", optional = true }
page_table_entry = { path = "../../crates/page_table_entry", features = ["hv"], optional = true }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14", optional = true }
axalloc = { path = "../axalloc", optional = true }
bitflags = "1.3"
spin = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }


[dev-dependencies]
rand = "0.8"
axhal = { path = "../axhal", features = ["fp_simd"] }
axtask = { path = ".", features = ["test"] }


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"
bitfield = "0.15"
num_enum = { version = "0.7", default-features = false }
