[package]
name = "axvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
guest_nimbos = []
guest_linux = []

[dependencies]
log = "0.4"
spin = "0.9"
bit_field = "0.10"
bitflags = "2.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
fdt = { version = "0.1.5" }
arrayvec = { version = "0.7.2", default-features = false }

axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
axruntime = { path = "../axruntime", default-features = false }
axalloc = { path = "../axalloc" }

hypercraft = { path = "../../crates/hypercraft" }
page_table_entry = { path = "../../crates/page_table_entry", features = ["hv"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"
