[package]
name = "axvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
guest_nimbos = []
guest_linux = []
type1_5 = []

[dependencies]
# third-party deps
log = "0.4"
spin = "0.9"
libc = "0.2"
bit_field = "0.10"
byteorder = { version = "1.4.3", default-features = false }
bitflags = "2.2"
ranges = "0.3.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
fdt = { version = "0.1.5" }
arrayvec = { version = "0.7.2", default-features = false }
hashbrown = "0.14"

# ax modules
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axlog = { path = "../axlog" }
axruntime = { path = "../axruntime", default-features = false }
axalloc = { path = "../axalloc" }
# axtask = { path = "../axtask",  features = ["hv", "monolithic"]}
axtask = { path = "../axtask", features = ["hv"] }

# ax crates
percpu = { path = "../../crates/percpu" }
lazy_init = { path = "../../crates/lazy_init" }
hypercraft = { path = "../../crates/hypercraft" }
memory_addr = { path = "../../crates/memory_addr" }
page_table_entry = { path = "../../crates/page_table_entry", features = ["hv"] }
pci = { path = "../../crates/pci" }

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
# See below for all features
features = ["no_std", "decoder", "masm", "instr_info", "op_code_info"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"
