[package]
name = "syscall_entry"
version = "0.1.0"
edition = "2021"

authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
description = "ArceOS user program library for linux apps with posix_syscall"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["monolithic"]

monolithic = ["paging", "fs", "multitask", "irq"]

# Multicore
smp = ["spinlock/smp"]

# Floating point/SIMD
fp_simd = ["axhal/fp_simd"]

# Memory
alloc = ["dep:axalloc", "axruntime/alloc"]
paging = ["axruntime/paging"]

# Interrupts
irq = ["axruntime/irq"]

# File system
# Fs
fs = ["axruntime/fs"]


# Multi-task
multitask = ["axruntime/multitask"]

# # Syscall Select
# syscall_net = ["dep:syscall_net"]
# # 只有当 syscall_mem 和 syscall_fs 同时启动时，才会启动 syscall_mem/fs
# syscall_fs = ["dep:syscall_fs", "syscall_mem?/fs", "fs"]
# syscall_mem = ["dep:syscall_mem"]
# syscall_task = ["dep:syscall_task"]

[dependencies]
linux-syscalls = "0.3.2"

axlog = { path = "../../../modules/axlog" }
axruntime = { path = "../../../modules/axruntime" }
axhal = { path = "../../../modules/axhal" }
axtask = { path = "../../../modules/axtask"}
axprocess = { path = "../../../modules/axprocess" }
axalloc = { path = "../../../modules/axalloc", optional = true }


syscall_utils = { path = "../syscall_utils" }

crate_interface = { path = "../../../crates/crate_interface" }
lazy_init = { path = "../../../crates/lazy_init" }
spinlock = { path = "../../../crates/spinlock" }
kernel_guard = { path = "../../../crates/kernel_guard" }
